Fix overlapping navigation elements

--- a/css/utility.css
+++ b/css/utility.css
@@ -35,13 +35,13 @@ td { border: 2px #ccc solid; color: #ababab; height: 26px;}
 .descPara span { font-size: 15px; font-weight: 800;}
 
 #head_sec { width: 100%; height: 80px; background: #f0f0f0;}
-#up_sec { width: 100%; height: 90px; position: relative;}
+#up_sec { width: 100%; height: 90px; position: relative; margin-top: 50px; }
 .pageName {border: 2px solid #241f20; width: 200px; margin-left: 20px; text-align: center; line-height: 50px; float: left; font-size: 16px;}
 
 #file_details { font-family: 'Karla', sans-serif; position: absolute; font-size: 13px; line-height: 13px; color: #919396; margin: 22px 0 0 250px;}
 #file_details span { font-family: 'Varela Round', sans-serif; color: #000; font-size: 20px;}
 
-.orange_btn { font-family: 'Karla', sans-serif; width: 130px; height: 40px; float: right; border: none; font-size: 16px; background-color: #241f20; color: #fff; margin: 15px 20px 0 0;}
+.orange_btn { font-family: 'Karla', sans-serif; width: 130px; height: 40px; float: right; border: none; font-size: 16px; background-color: #241f20; color: #fff; margin: -35px 20px 0 0;}
 .basicTooltip { position: absolute; font-size: 12px; color: #000; background: #fff; border: 1px solid rgba(200,200,200,0.85); border-radius: 1px; padding: 5px 5px 15px 5px;}
 
 /* ==========================================================================
